[package]
name = "actix_error_proc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix_error_proc_macros = { path = "../actix_error_proc_macros" }
thiserror = { version = "2.0.11", optional = true }

[features]
thiserror = ["dep:thiserror"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros"] }
actix_error_proc = { path = ".", features = ["thiserror"] }
reqwest = "0.12.12"
