[package]
name = "actix_error_proc"
description = "A small crate to integrate thiserror with actix_web."
readme = "../readme.md"
repository = "https://github.com/stifskere/actix_error_proc"
license = "MIT"
keywords = ["actix_web", "actix", "thiserror", "macros", "error"]
categories = ["web-programming"]
version = "1.0.1"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix_error_proc_macros = "0"
thiserror = { version = "2.0.11", optional = true }

[features]
thiserror = ["dep:thiserror"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros"] }
actix_error_proc = { path = ".", features = ["thiserror"] }
reqwest = "0.12.12"
